--- a/pages/popup.html
+++ b/pages/popup.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../styles/popup.css" />
-<script src="../scripts/popup.js"></script>
+<script type="text/javascript" src="../scripts/popup.js" charset="UTF-8"></script>
 
 <div class="loading">Loading...</div>
 
