Add form to refine query

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -9,4 +9,14 @@
 </div>
 
 <div class="not-found hidden">Song not found</div>
+
+<form class="load">
+	<fieldset>
+		<legend>Refine query</legend>
+
+		<input type="text" name="query" required />
+		<button type="submit">Load</button>
+	</fieldset>
+</form>
+
 <div class="not-supported hidden">This site is not supported</div>
