Add link to external lyrics page

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -5,6 +5,8 @@
 
 <div class="lyrics hidden">
 	<h3 class="title"></h3>
+	<a class="link" target="_blank">Lyrics page</a>
+
 	<div class="text"></div>
 </div>
 
