Fix height of popup when site is not supported

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -12,7 +12,7 @@
 
 <div class="not-found hidden">Song not found</div>
 
-<form class="load">
+<form class="load hidden">
 	<fieldset>
 		<legend>Refine query</legend>
 
