--- a/pages/options.html
+++ b/pages/options.html
@@ -11,4 +11,8 @@
 	<label>
 		<input type="radio" name="theme" value="light" /> Light
 	</label>
+
+	<label>
+		<input type="radio" name="theme" value="dark" /> Dark
+	</label>
 </fieldset>
