Add song art (album cover) displaying
With an ability to disable in options.

--- a/pages/options.html
+++ b/pages/options.html
@@ -16,3 +16,7 @@
 		<input type="radio" name="theme" value="dark" /> Dark
 	</label>
 </fieldset>
+
+<label class="song-art">
+	<input type="checkbox" name="song-art" /> Display song art image
+</label>
