--- a/pages/popup.html
+++ b/pages/popup.html
@@ -4,8 +4,14 @@
 <div class="loading">Loading...</div>
 
 <div class="lyrics hidden">
-	<h3 class="title"></h3>
-	<a class="link" target="_blank">Lyrics page</a>
+	<div class="header">
+		<img class="song-art" />
+
+		<div class="right-part">
+			<h3 class="title"></h3>
+			<a class="link" target="_blank">Lyrics page</a>
+		</div>
+	</div>
 
 	<div class="text"></div>
 </div>
