Add notice about Genius CAPTCHA

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -3,6 +3,10 @@
 
 <div class="loading">Loading...</div>
 
+<div class="captcha hidden">
+	Please, pass the CAPTHA, then freely close the new window and re-open the extension.
+</div>
+
 <div class="lyrics hidden">
 	<div class="header">
 		<img class="song-art" />
