Add song art color gradient background
Also add scripts compilation.

--- a/pages/options.html
+++ b/pages/options.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../styles/options.css" />
-<script type="text/javascript" src="../scripts/options.js" charset="UTF-8"></script>
+<script type="text/javascript" src="../scripts/compiled/options.js" charset="UTF-8"></script>
 
 <fieldset class="theme">
 	<legend>Theme</legend>
