--- a/pages/popup.html
+++ b/pages/popup.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../styles/popup.css" />
-<script type="text/javascript" src="../scripts/popup.js" charset="UTF-8"></script>
+<script type="text/javascript" src="../scripts/compiled/popup.js" charset="UTF-8"></script>
 
 <div class="loading">Loading...</div>
 
@@ -9,7 +9,7 @@
 
 <div class="lyrics hidden">
 	<div class="header">
-		<img class="song-art" />
+		<img class="song-art" crossorigin="anonymous" />
 
 		<div class="right-part">
 			<h3 class="title"></h3>
