Add query text (or other search result full title) into loading notice

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -1,7 +1,9 @@
 <link rel="stylesheet" href="../styles/popup.css" />
 <script type="text/javascript" src="../scripts/compiled/popup.js" charset="UTF-8"></script>
 
-<div class="loading">Loading...</div>
+<div class="loading">
+	Loading "<span class="query"></span>"...
+</div>
 
 <div class="captcha hidden">
 	Please, pass the CAPTHA, then freely close the new window and re-open the extension.
