Add link to a search page on Genius
Even if not found.

Remove `()` because they're breaking (redirecting) search page.

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -43,6 +43,8 @@
 	</ul>
 </div>
 
+<a class="search-page hidden" target="_blank">Search page</a>
+
 <form class="load hidden">
 	<fieldset>
 		<legend>Refine query</legend>
