Add link to contact the developer if site is not supported

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -25,7 +25,11 @@
 	<div class="text"></div>
 </div>
 
-<div class="not-found hidden">Song not found</div>
+<div class="not-found hidden">
+	<p>
+		Song not found
+	</p>
+</div>
 
 <div class="other-search-results hidden">
 	<h4 id="other-search-results">Other search results</h4>
@@ -54,4 +58,12 @@
 	</fieldset>
 </form>
 
-<div class="not-supported hidden">This site is not supported</div>
+<div class="not-supported hidden">
+	<p>
+		This site is not supported
+	</p>
+
+	<a href="https://github.com/AlexWayfer/song-lyrics/issues/new" target="_blank">
+		Contact the developer
+	</a>
+</div>
