--- a/pages/popup.html
+++ b/pages/popup.html
@@ -63,7 +63,7 @@
 		This site is not supported
 	</p>
 
-	<a href="https://github.com/AlexWayfer/song-lyrics/issues/new" target="_blank">
+	<a target="_blank">
 		Contact the developer
 	</a>
 </div>
