Add music platforms for popup iframe on non-supported sites

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -26,9 +26,9 @@
 </div>
 
 <div class="not-found hidden">
-	<p>
+	<h4>
 		Song not found
-	</p>
+	</h4>
 </div>
 
 <div class="other-search-results hidden">
@@ -59,11 +59,39 @@
 </form>
 
 <div class="not-supported hidden">
-	<p>
+	<h4>
 		This site is not supported
+	</h4>
+
+	<p>
+		List of supported sites:
 	</p>
 
-	<a target="_blank">
-		Contact the developer
+	<ul>
+		<li>
+			<a href="https://music.apple.com/" target="_blank">Apple Music</a>
+		</li>
+		<li>
+			<a href="https://www.deezer.com/" target="_blank">Deezer</a>
+		</li>
+		<li>
+			<a href="https://soundcloud.com/" target="_blank">SoundCloud</a>
+		</li>
+		<li>
+			<a href="https://open.spotify.com/" target="_blank">Spotify</a>
+		</li>
+		<li>
+			<a href="https://music.yandex.ru/" target="_blank">Yandex Music</a>
+		</li>
+		<li>
+			<a href="https://www.youtube.com/" target="_blank">YouTube</a>
+		</li>
+		<li>
+			<a href="https://music.youtube.com/" target="_blank">YouTube Music</a>
+		</li>
+	</ul>
+
+	<a class="request" target="_blank">
+		Request the support of this site
 	</a>
 </div>
