Add an error notice when site doesn't work as expected

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -49,6 +49,16 @@
 
 <a class="search-page hidden" target="_blank">Search page</a>
 
+<div class="breakdown hidden">
+	<h4>
+		An unexpected error has happened
+	</h4>
+
+	<a class="report" target="_blank">
+		Report error on this site
+	</a>
+</div>
+
 <div class="not-supported hidden">
 	<h4>
 		This site is not supported
