Add a link to report about not found songs

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -68,7 +68,13 @@
 	</ul>
 </div>
 
-<a class="search-page hidden" target="_blank">Search page</a>
+<div class="search-page hidden">
+	<a target="_blank">Search page</a>
+</div>
+
+<div class="report-not-found-song hidden">
+	<a target="_blank">Report not found song</a>
+</div>
 
 <div class="breakdown hidden">
 	<h4>
